fix: allow https://dynamic-online-shopping.netlify.app